dev/chart/templates/deployment-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: position-simulator
  template: 
    metadata: 
      labels: 
        name: position-simulator
    spec:
      containers:
      - name: position-simulator
        #image: lnebilos/position-simulator:0.1
        image: richardchesterwood/k8s-fleetman-position-simulator:release2
