dev/chart/templates/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:3.6.23
        volumeMounts:
          - name: mongo-persistent-storage
            mountPath: /data/db
        resources: 
          requests: 
            memory: 400Mi
            cpu: 100m
      volumes:
        - name: mongo-persistent-storage
          hostPath:    # données stockées en dehors du pod si kubectl est supprimé
           path: /mnt/some/directory/structure/     # for vm minikube 
           type: DirectoryOrCreate

---

kind: Service
apiVersion: v1
metadata:
  name: fleetman-mongodb
spec:
  selector:
    app: mongodb
  ports:
    - name: mongoport
      port: 27017
  type: ClusterIP
