dev/chart/templates/service-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    name: api-gateway
  ports: 
    - name: http
      port: 8080
      nodePort: 30021

  type: NodePort
