dev/chart/templates/service-queue.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue
spec:
  selector:
    name: queue
  ports: 
    - name: http
      port: 8161
      nodePort: 30014

    - name: endpoint
      port: 61616
  
  type: NodePort
