dev/chart/templates/service-tracker.yaml
apiVersion: v1
kind: Service
metadata:
  name: position-tracker
spec:
  selector:
    name: position-tracker
  ports: 
    - name: http
      port: 8080

  type: ClusterIP
